--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "next": "12.2.5",
+    "plotly.js": "^2.14.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-plotly.js": "^2.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
