--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "next": "12.2.5",
-    "plotly.js": "^2.14.0",
+    "plotly.js-basic-dist-min": "^2.14.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-plotly.js": "^2.5.1"
